[package]
name = "my_kernel"
version = "0.1.0"
authors = ["Darby Sauter <darbysauter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6" # remove eventually
spin = "0.5.2" # remove eventually

# remove eventually
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
